--- a/css/styles.css
+++ b/css/styles.css
@@ -245,16 +245,16 @@ footer {
 	border: 1px solid rgba(150, 148, 148, 0.4);
 }
 
-div.td {
+.td {
 	border-right: none;
 	border-left: none;
 }
 
-div.td:last-child {
+.td:last-child {
 	border-right: 1px solid rgba(150, 148, 148, 0.4);
 }
 
-div.td:first-child {
+.td:first-child {
 	border-left: 1px solid rgba(150, 148, 148, 0.4);
 }
 
