Modify default ul to div in jQuery-ui. Add padding to sortable3 to allow drop of empty list.

--- a/css/styles.css
+++ b/css/styles.css
@@ -300,8 +300,12 @@ footer {
 	padding: 2px;
 }
 
-ul.ui-sortable-handle {
+.ui-sortable-handle {
 	background-color: transparent;
+}
+
+#sortable3 {
+	height: 5px;
 }
 
 /*--------------------------------
