--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ h3, h4, div, input {
 	margin: 0;
 }
 
+input { 
+	vertical-align: bottom;
+}
+
 li {
 	text-decoration: none;
 	list-style: none;
@@ -44,9 +48,15 @@ a {
 	text-decoration: none;
 }
 
+button {
+	color: #000;
+}
+
 footer {
 	text-align: right;
 	padding-right: 12px;
+	position: relative;
+	top: 90%;
 }
 
 .wrapper {
@@ -216,11 +226,9 @@ footer {
 /*  COME BACK AND MODIFY TABLE*/
 .table { 
 	width: 100%;
-	height: 200px;
+	height: 300px;
 	display: table;
 	letter-spacing: .05em;
-	margin: 0 auto;
-	border-spacing: 0 2px;
 }
 
 .thead-shopping,
@@ -237,41 +245,39 @@ footer {
 	text-align: center;
 }
 
-.tbody-shopping .tr,
-.tbody-purchases .tr {
-	background-color: #35cc11;
+.tr {
 	margin: 2px;
-	height: 34px;
+	height: 40px;
+	border-radius: 4px;
+	background-color: #35cc11;
+	box-shadow: 2px 2px 6px rgba(44, 16, 255, 0.6);
+	transition: background-color .6s, box-shadow .6s;
 }
 
 .td,
 .col {
 	display: table-cell;
 	padding: 3px 0px;
-	vertical-align: middle;
 }
 
-.content .tbody-shopping input,
-.content .tbody-purchases input {
-	display: table-cell;
-	text-align: right;
-	vertical-align: bottom;
-	font-size: 1em;
-	border: none;
+.tr li {
+	width: 100;
 	color: #000;
-	background-color: transparent;
-	cursor: pointer;
 }
 
-.tbody-shopping ul:last-child,
-.tbody-purchases ul:last-child {
-	margin-bottom: 20px;
+.tr input {
+	text-align: right;
+	height: 20px;
+	margin-top: 4px;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
 }
 
 .col-item-description,
 .td-item-description-input,
 .td-item-description {
-	width: 372px;
+	width: 63.1%;
 	text-align: center!important;
 	padding-left: 12px;
 }
@@ -279,8 +285,8 @@ footer {
 .td-item-price-input,
 .td-item-price,
 .td-item-total-input,
-.td-item-total{
-	width: 70px;
+.td-item-total {
+	width: 12.5%;
 }
 
 .col-price,
@@ -291,13 +297,18 @@ footer {
 
 .col-qty-input,
 .col-qty {
-	width: 40px;
+	width: 6.8%;
 }
 
 .tbody-shopping ul,
 .tbody-purchases ul {
-	width: 590px;
-	padding: 2px;
+	width: 100%;;
+	padding: 2px 0px 2px 0px;
+	margin: 0 auto 6px!important;
+}
+
+.table div:last-child {
+	margin-bottom: 40px;
 }
 
 .ui-sortable-handle {
@@ -344,10 +355,6 @@ footer {
 
 .total-all img {
 	display: inline-block;
-/*
-	background-color: rgba(248, 38, 0, 0);
-	transition: background-color .5s;
-*/
 	float: left;
 	padding: 6px 10px;
 	width: 34px;
@@ -371,17 +378,24 @@ footer {
 /*  TABLE :HOVER EFFECTS */
 /*--------------------------------*/
 
-.tr:hover,
-.tr-purchases:hover {
+.tr:hover {
 	background-color: rgb(250, 255, 249);
-	transition: background-color .6s;
+	box-shadow: -2px 2px 6px rgba(254, 254, 255, 0.6)
+	transition: background-color .6s box-shadow .6s;
+}
+
+.total-all img {
+	background-color: rgba(248, 38, 0, 0);
+	width: 34px;
+	height: 34px;
+	transition: background-color 1s, width 1s, height 1s;
 }
 
 .total-all img:hover {
-/*
-	background-color: rgba(248, 38, 0, 0);
-	transition: background-color .5s;
-*/
+	background-color: rgba(248, 38, 0, 0.5);
+	width: 38px;
+	height: 38px;,
+	transition: background-color 1s, width 1s, height 1s;
 	cursor: pointer;
 }
 
