--- a/css/styles.css
+++ b/css/styles.css
@@ -275,12 +275,12 @@ footer {
 }
 
 .td-item-description-input {
-/*	width: 22.3125em;*/
-	width: 30%;
+	width: 22.3125em;
 	padding-right: 2%;
 	text-align: center!important;
 }
 
+/*Why doesn't changing the width correct the total price float issue?*/
 /*note .main .content is 595px wide*/
 
 .col-item-description,
